[package]
name = "nodewith_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node-bindgen = {version = "5.0"}
[build-dependencies]
node-bindgen = {version = "5.0", features =["build"]}
[lib]
name = "nodewith_rust"
crate-type = ["cdylib"]